--- a/Food_Inspection.css
+++ b/Food_Inspection.css
@@ -32,4 +32,22 @@ body {
 
   #mapid { 
       height: 180px; 
-    }
+  }
+  
+  .wrapper {
+      min-height: 100%;
+      display: flex;
+      width: 80%;
+      justify-content: flex-start;
+      align-items: center;
+      flex-wrap: wrap;
+      flex-direction: column;
+      background: #99ff79;
+      border: 1px dashed #ccc;
+      margin: 25px;
+      
+      }
+      
+      .wrapper div {
+        border-radius: 14px;
+      }
