changed base colors

--- a/style.css
+++ b/style.css
@@ -2,7 +2,12 @@
 
 body {
   background-color : #ffffff;
-  font-family : arial, verdana, sans-serif;
+  font-family : Segoe UI, Tahoma, Helvetica, sans-serif	
+
+}
+
+a {
+  text-decoration: none;
 }
 
 h1 {
@@ -47,7 +52,7 @@ td.code {
   align-items: center;
   flex-wrap: wrap;
   flex-direction: row;
-  background: #99ff79;
+  background: #BFBFBF;
   border: 1px;
   margin: 25px;
       
@@ -58,7 +63,7 @@ td.code {
 }
 
 .filter{
-  background-color: rgb(255, 98, 41);
+  background-color: #808080;
   text-align: center;
 }
 
@@ -66,6 +71,6 @@ td.code {
   display: flex; /* or inline-flex */
   flex-direction: column;
   justify-content: flex-start;
-  background-color: rgb(221, 255, 0);
+  background-color: #E6E6E6;
 }
 
