--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ html {
 
 header {
   display: flex;
-  background-color: rgba(253, 165, 41, 0.8);
+  background-color: rgba(253, 165, 41, 0.80);
   justify-content: center;
   margin-bottom: -0.5em;
 }
@@ -15,8 +15,8 @@ header {
 }
 
 body {
-  background-color: #ffffff;
-  font-family: "Trebuchet MS", Segoe UI, Tahoma, Helvetica, sans-serif;
+  background-color : #ffffff;
+  font-family : "Trebuchet MS", Segoe UI, Tahoma, Helvetica, sans-serif	
 }
 
 #links a {
@@ -25,15 +25,15 @@ body {
   margin: 0 0.2em;
   margin-bottom: 1em;
   padding: 3px;
-  background: #97caf2;
-  border: 2px solid rgba(0, 0, 0, 0.15);
+  background: #97CAF2;
+  border: 2px solid rgba(0,0,0,0.15);
   border-radius: 4px;
   font-weight: bold;
   color: white;
 }
 
 h1 {
-  font-size: 26px;
+  font-size:26px;
   text-align: center;
 }
 
@@ -45,40 +45,34 @@ h3 {
 
 h4 {
   text-align: center;
-  margin-bottom: auto;
 }
 
 p {
-  font-size: 16px;
-  margin-bottom: auto;
-}
-
-a {
-  text-decoration: none;
+  font-size:14px;
 }
 
 table {
-  background-color: #efefef;
-  border-style: solid;
-  border-width: 1px;
-  border-color: #999999;
+  background-color:#efefef;
+  border-style:solid;
+  border-width:1px;
+  border-color:#999999;
 }
 
 th {
-  background-color: #cccccc;
-  font-weight: bold;
-  padding: 5px;
+  background-color:#cccccc;
+  font-weight:bold;
+  padding:5px;
 }
 
 td {
-  padding: 5px;
+  padding:5px;
 }
 
 td.code {
-  font-family: courier, courier-new, serif;
-  font-weight: bold;
+  font-family:courier, courier-new, serif;
+  font-weight:bold;
 }
-
+  
 .wrapper {
   min-height: 100%;
   display: flex;
@@ -91,12 +85,12 @@ td.code {
   /* border: 1px; */
   /* margin: 25px; */
 }
-
+      
 .wrapper div {
   border-radius: 8px;
 }
 
-.filter {
+.filter{
   background-color: #808080;
   text-align: center;
 }
@@ -105,17 +99,6 @@ td.code {
   display: flex; /* or inline-flex */
   flex-direction: column;
   justify-content: flex-start;
-  background-color: #e6e6e6;
+  background-color: #E6E6E6;
 }
 
-.logos {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.logos img {
-  margin-top: 1em;
-  max-width: 157px;
-  margin-right: 1em;
-}
