--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ html {
 }
 
 header {
-  display: flex;
+  /* display: flex; */
   background-color: rgba(253, 165, 41, 0.8);
   justify-content: center;
   margin-bottom: -0.5em;
@@ -86,7 +86,7 @@ td.code {
   justify-content: center;
   align-items: center;
   flex-wrap: wrap;
-  flex-direction: row;
+  flex-direction: column;
   background: orange;
   /* border: 1px; */
   /* margin: 25px; */
