--- a/style.css
+++ b/style.css
@@ -4,8 +4,6 @@ html {
 }
 
 header {
-  /* display: flex; */
-  background-color: rgba(253, 165, 41, 0.8);
   justify-content: center;
   margin-bottom: -0.5em;
   text-shadow: 1px 1.5px 1px #ccc;
@@ -27,7 +25,7 @@ body {
   margin-bottom: 1em;
   padding: 3px;
   background-color: #97caf2;
-  /* border: 2px solid rgba(0, 0, 0, 0.15); */
+  border: 2px solid rgba(0, 0, 0, 0.15);
   border-radius: 4px;
   box-shadow: 0 5px #999;
   border: none;
